@@ -16,12 +16,14 @@ import com.google.cloud.bigquery.QueryJobConfiguration;
 import com.google.cloud.storage.Storage;
 import com.google.cloud.storage.StorageOptions;
 import com.google.common.base.Charsets;
+import io.airbyte.commons.functional.CheckedBiFunction;
 import io.airbyte.commons.json.Jsons;
 import io.airbyte.integrations.BaseConnector;
 import io.airbyte.integrations.base.AirbyteMessageConsumer;
 import io.airbyte.integrations.base.AirbyteStreamNameNamespacePair;
 import io.airbyte.integrations.base.Destination;
 import io.airbyte.integrations.base.IntegrationRunner;
+import io.airbyte.integrations.destination.StandardNameTransformer;
 import io.airbyte.integrations.destination.bigquery.formatter.BigQueryRecordFormatter;
 import io.airbyte.integrations.destination.bigquery.formatter.DefaultBigQueryRecordFormatter;
 import io.airbyte.integrations.destination.bigquery.formatter.GcsAvroBigQueryRecordFormatter;
@@ -30,6 +32,14 @@ import io.airbyte.integrations.destination.bigquery.uploader.AbstractBigQueryUpl
 import io.airbyte.integrations.destination.bigquery.uploader.BigQueryUploaderFactory;
 import io.airbyte.integrations.destination.bigquery.uploader.UploaderType;
 import io.airbyte.integrations.destination.bigquery.uploader.config.UploaderConfig;
+import io.airbyte.integrations.destination.gcs.GcsDestinationConfig;
+import io.airbyte.integrations.destination.gcs.GcsNameTransformer;
+import io.airbyte.integrations.destination.gcs.GcsStorageOperations;
+import io.airbyte.integrations.destination.gcs.util.GcsUtils;
+import io.airbyte.integrations.destination.record_buffer.FileBuffer;
+import io.airbyte.integrations.destination.record_buffer.SerializableBuffer;
+import io.airbyte.integrations.destination.s3.avro.AvroSerializedBuffer;
+import io.airbyte.integrations.destination.s3.avro.S3AvroFormatConfig;
 import io.airbyte.protocol.models.AirbyteConnectionStatus;
 import io.airbyte.protocol.models.AirbyteConnectionStatus.Status;
 import io.airbyte.protocol.models.AirbyteMessage;
@@ -41,9 +51,14 @@ import java.io.IOException;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.UUID;
+import java.util.function.BiFunction;
 import java.util.function.Consumer;
-import java.util.stream.Collectors;
+import java.util.function.Function;
+import org.apache.avro.Schema;
 import org.apache.commons.lang3.tuple.ImmutablePair;
+import org.joda.time.DateTime;
+import org.joda.time.DateTimeZone;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
@@ -57,7 +72,7 @@ public class BigQueryDestination extends BaseConnector implements Destination {
       "storage.objects.delete",
       "storage.objects.get",
       "storage.objects.list");
-  private final BigQuerySQLNameTransformer namingResolver;
+  protected final BigQuerySQLNameTransformer namingResolver;
 
   public BigQueryDestination() {
     namingResolver = new BigQuerySQLNameTransformer();
@@ -71,7 +86,7 @@ public class BigQueryDestination extends BaseConnector implements Destination {
       final BigQuery bigquery = getBigQuery(config);
       final UploadingMethod uploadingMethod = BigQueryUtils.getLoadingMethod(config);
 
-      BigQueryUtils.createSchemaTable(bigquery, datasetId, datasetLocation);
+      BigQueryUtils.createDataset(bigquery, datasetId, datasetLocation);
       final QueryJobConfiguration queryConfig = QueryJobConfiguration
           .newBuilder(String.format("SELECT * FROM `%s.INFORMATION_SCHEMA.TABLES` LIMIT 1;", datasetId))
           .setUseLegacySql(false)
@@ -100,24 +115,24 @@ public class BigQueryDestination extends BaseConnector implements Destination {
     }
   }
 
-  public AirbyteConnectionStatus checkStorageIamPermissions(JsonNode config) {
+  public AirbyteConnectionStatus checkStorageIamPermissions(final JsonNode config) {
     final JsonNode loadingMethod = config.get(BigQueryConsts.LOADING_METHOD);
     final String bucketName = loadingMethod.get(BigQueryConsts.GCS_BUCKET_NAME).asText();
 
     try {
-      ServiceAccountCredentials credentials = getServiceAccountCredentials(config);
+      final ServiceAccountCredentials credentials = getServiceAccountCredentials(config);
 
-      Storage storage = StorageOptions.newBuilder()
+      final Storage storage = StorageOptions.newBuilder()
           .setProjectId(config.get(BigQueryConsts.CONFIG_PROJECT_ID).asText())
           .setCredentials(!isNull(credentials) ? credentials : ServiceAccountCredentials.getApplicationDefault())
           .build().getService();
-      List<Boolean> permissionsCheckStatusList = storage.testIamPermissions(bucketName, REQUIRED_PERMISSIONS);
+      final List<Boolean> permissionsCheckStatusList = storage.testIamPermissions(bucketName, REQUIRED_PERMISSIONS);
 
-      List<String> missingPermissions = StreamUtils
+      final List<String> missingPermissions = StreamUtils
           .zipWithIndex(permissionsCheckStatusList.stream())
           .filter(i -> !i.getValue())
           .map(i -> REQUIRED_PERMISSIONS.get(Math.toIntExact(i.getIndex())))
-          .collect(Collectors.toList());
+          .toList();
 
       if (!missingPermissions.isEmpty()) {
         LOGGER.error("Please make sure you account has all of these permissions:{}", REQUIRED_PERMISSIONS);
@@ -137,10 +152,6 @@ public class BigQueryDestination extends BaseConnector implements Destination {
           .withMessage("Could not connect to the Gcs bucket with the provided configuration. \n" + e
               .getMessage());
     }
-  }
-
-  protected BigQuerySQLNameTransformer getNamingResolver() {
-    return namingResolver;
   }
 
   protected BigQuery getBigQuery(final JsonNode config) {
@@ -164,44 +175,29 @@ public class BigQueryDestination extends BaseConnector implements Destination {
     }
   }
 
-  private ServiceAccountCredentials getServiceAccountCredentials(JsonNode config) throws IOException {
-    ServiceAccountCredentials credentials;
-    final String credentialsString =
-        config.get(BigQueryConsts.CONFIG_CREDS).isObject() ? Jsons.serialize(config.get(BigQueryConsts.CONFIG_CREDS))
-            : config.get(BigQueryConsts.CONFIG_CREDS).asText();
+  private ServiceAccountCredentials getServiceAccountCredentials(final JsonNode config) throws IOException {
+    final ServiceAccountCredentials credentials;
+    final String credentialsString = config.get(BigQueryConsts.CONFIG_CREDS).isObject()
+        ? Jsons.serialize(config.get(BigQueryConsts.CONFIG_CREDS))
+        : config.get(BigQueryConsts.CONFIG_CREDS).asText();
     credentials = ServiceAccountCredentials
         .fromStream(new ByteArrayInputStream(credentialsString.getBytes(Charsets.UTF_8)));
     return credentials;
   }
 
-  /**
-   * Strategy:
-   * <p>
-   * 1. Create a temporary table for each stream
-   * </p>
-   * <p>
-   * 2. Write records to each stream directly (the bigquery client handles managing when to push the
-   * records over the network)
-   * </p>
-   * <p>
-   * 4. Once all records have been written close the writers, so that any remaining records are
-   * flushed.
-   * </p>
-   * <p>
-   * 5. Copy the temp tables to the final table name (overwriting if necessary).
-   * </p>
-   *
-   * @param config - integration-specific configuration object as json. e.g. { "username": "airbyte",
-   *        "password": "super secure" }
-   * @param catalog - schema of the incoming messages.
-   * @return consumer that writes singer messages to the database.
-   */
   @Override
   public AirbyteMessageConsumer getConsumer(final JsonNode config,
                                             final ConfiguredAirbyteCatalog catalog,
                                             final Consumer<AirbyteMessage> outputRecordCollector)
       throws IOException {
-    return getRecordConsumer(getUploaderMap(config, catalog), outputRecordCollector);
+    final UploadingMethod uploadingMethod = BigQueryUtils.getLoadingMethod(config);
+    if (uploadingMethod == UploadingMethod.STANDARD) {
+      LOGGER.warn("The \"standard\" upload mode is not performant, and is not recommended for production. " +
+          "Please use the GCS upload mode if you are syncing a large amount of data.");
+      return getStandardRecordConsumer(config, catalog, outputRecordCollector);
+    } else {
+      return getGcsRecordConsumer(config, catalog, outputRecordCollector);
+    }
   }
 
   protected Map<AirbyteStreamNameNamespacePair, AbstractBigQueryUploader<?>> getUploaderMap(final JsonNode config,
@@ -243,18 +239,73 @@ public class BigQueryDestination extends BaseConnector implements Destination {
   }
 
   protected Map<UploaderType, BigQueryRecordFormatter> getFormatterMap(final JsonNode jsonSchema) {
-    return Map.of(UploaderType.STANDARD, new DefaultBigQueryRecordFormatter(jsonSchema, getNamingResolver()),
-        UploaderType.CSV, new GcsCsvBigQueryRecordFormatter(jsonSchema, getNamingResolver()),
-        UploaderType.AVRO, new GcsAvroBigQueryRecordFormatter(jsonSchema, getNamingResolver()));
+    return Map.of(UploaderType.STANDARD, new DefaultBigQueryRecordFormatter(jsonSchema, namingResolver),
+        UploaderType.CSV, new GcsCsvBigQueryRecordFormatter(jsonSchema, namingResolver),
+        UploaderType.AVRO, new GcsAvroBigQueryRecordFormatter(jsonSchema, namingResolver));
   }
 
   protected String getTargetTableName(final String streamName) {
     return namingResolver.getRawTableName(streamName);
   }
 
-  protected AirbyteMessageConsumer getRecordConsumer(final Map<AirbyteStreamNameNamespacePair, AbstractBigQueryUploader<?>> writeConfigs,
-                                                     final Consumer<AirbyteMessage> outputRecordCollector) {
+  private AirbyteMessageConsumer getStandardRecordConsumer(final JsonNode config,
+                                                           final ConfiguredAirbyteCatalog catalog,
+                                                           final Consumer<AirbyteMessage> outputRecordCollector)
+      throws IOException {
+    final Map<AirbyteStreamNameNamespacePair, AbstractBigQueryUploader<?>> writeConfigs = getUploaderMap(config, catalog);
     return new BigQueryRecordConsumer(writeConfigs, outputRecordCollector);
+  }
+
+  public AirbyteMessageConsumer getGcsRecordConsumer(final JsonNode config,
+                                                     final ConfiguredAirbyteCatalog catalog,
+                                                     final Consumer<AirbyteMessage> outputRecordCollector) {
+
+    final StandardNameTransformer gcsNameTransformer = new GcsNameTransformer();
+    final BigQuery bigQuery = getBigQuery(config);
+    final GcsDestinationConfig gcsConfig = BigQueryUtils.getGcsAvroDestinationConfig(config);
+    final UUID stagingId = UUID.randomUUID();
+    final DateTime syncDatetime = DateTime.now(DateTimeZone.UTC);
+    final boolean keepStagingFiles = BigQueryUtils.isKeepFilesInGcs(config);
+    final GcsStorageOperations gcsOperations = new GcsStorageOperations(gcsNameTransformer, gcsConfig.getS3Client(), gcsConfig);
+    final BigQueryStagingOperations bigQueryGcsOperations = new BigQueryGcsOperations(
+        bigQuery,
+        gcsNameTransformer,
+        gcsConfig,
+        gcsOperations,
+        stagingId,
+        syncDatetime,
+        keepStagingFiles);
+    final S3AvroFormatConfig avroFormatConfig = (S3AvroFormatConfig) gcsConfig.getFormatConfig();
+    final Function<JsonNode, BigQueryRecordFormatter> recordFormatterCreator = getRecordFormatterCreator(namingResolver);
+    final CheckedBiFunction<AirbyteStreamNameNamespacePair, ConfiguredAirbyteCatalog, SerializableBuffer, Exception> onCreateBuffer =
+        BigQueryAvroSerializedBuffer.createFunction(
+            avroFormatConfig,
+            recordFormatterCreator,
+            getAvroSchemaCreator(),
+            () -> new FileBuffer(AvroSerializedBuffer.DEFAULT_SUFFIX));
+
+    LOGGER.info("Creating BigQuery staging message consumer with staging ID {} at {}", stagingId, syncDatetime);
+    return new BigQueryStagingConsumerFactory().create(
+        config,
+        catalog,
+        outputRecordCollector,
+        bigQueryGcsOperations,
+        onCreateBuffer,
+        recordFormatterCreator,
+        namingResolver::getTmpTableName,
+        getTargetTableNameTransformer(namingResolver));
+  }
+
+  protected BiFunction<BigQueryRecordFormatter, AirbyteStreamNameNamespacePair, Schema> getAvroSchemaCreator() {
+    return (formatter, pair) -> GcsUtils.getDefaultAvroSchema(pair.getName(), pair.getNamespace(), true);
+  }
+
+  protected Function<JsonNode, BigQueryRecordFormatter> getRecordFormatterCreator(final BigQuerySQLNameTransformer namingResolver) {
+    return streamSchema -> new GcsAvroBigQueryRecordFormatter(streamSchema, namingResolver);
+  }
+
+  protected Function<String, String> getTargetTableNameTransformer(final BigQuerySQLNameTransformer namingResolver) {
+    return namingResolver::getRawTableName;
   }
 
   public static void main(final String[] args) throws Exception {
